tests/chapter_14/valid/extra_credit/incr_through_pointer.c
int main(void)
{
    int x = 10;
    int *y = &x;
    ++*y;
    return x;
}