tests/chapter_14/invalid_types/negate_pointer.c
/* It's illegal to negate a pointer */
int main(void) {
    int *x = 0;
    return (int) -x;
}